--- a/module_2/task_2-2/task_2-2.html
+++ b/module_2/task_2-2/task_2-2.html
@@ -12,31 +12,32 @@
     <ol>
       <li>Where should you use constants, and where should you use variables? Can they all be constants?</li>
       <p>
-				[Replace this with you answer]
+				if you are not going to change the value of what you are defining later on in the code you have to use variables, but if you know you never want to change the value and make sure that dosen't happen use constants
 			</p>
       <li>How do parentheses affect the arithmetic outcome of an expression?</li>
       <p>
-				[Replace this with you answer]
+				it does whatever operation that is in the parentheses first
 			</p>
       <li>How do we limit floating-point numbers to a given number of decimals?</li>
       <p>
-				[Replace this with you answer]
+				use the function toFixed(number of desimals)
 			</p>
       <li>How can we compare two floating-point values to see if they are equal (is 12.199999 the same as 12.2)?</li>
       <p>
-				[Replace this with you answer]
+				when wurking with floating-pont values it may be smart to make a tolerance level by creating a constant, then check of the value of the numbers you want to compare subtracted with the tolerance if its bigger its not equal.<br/>
+        you could also round of the numbers and compare with toFixed and == 
 			</p>
       <li>What do comparison operators return, and how can we check if they are FALSE or TRUE?</li>
       <p>
-				[Replace this with you answer]
+				the return the values of TRUE and FALSE, you could check by ether it beeing tied to a function or convert the value to a string with toString() and print it
 			</p>
       <li>How does the Math.random() function work, and what can it be used for?</li>
       <p>
-				[Replace this with you answer]
+				creates a random number in set perameters
 			</p>
       <li>What is modulus (%), and when do we need this operator in mathematical operations?</li>
       <p>
-				[Replace this with you answer]
+				it returns what is left after numbers is devided, you could use it when you for example is converting and want the answer given in more than one
 			</p>
     </ol>
 		<script type="module" src="./task_2-2.mjs" defer></script>
