--- a/module_3/task_3-1/task_3-1.html
+++ b/module_3/task_3-1/task_3-1.html
@@ -11,12 +11,15 @@
     </div>
     <ol>
       <li>Discuss the behavior of part 1, What happens when the wake-up time is not 7 and what happens when it is exactly 7?</li>
-      <p>[Replace this with you answer]</p>
+      <p>
+        when its 7 it prints out "i can take the bus to schoool" its it not it prints out nothing.
+      </p>
       <li>Same as question #1. How ever the answer should now be different. Discuss the behaviour of part 2, What happens when the wake-up time is not 7 and what happens when it is exactly 7?</li>
-      <p>[Replace this with you answer]</p>
+      <p>same as 1, but when its not 7 it print out "i have to use car to school"</p>
       <li>Discuss the behavior of part 3, what happens when wake time is less than 7 or greater than 8?</li>
-      <p>[Replace this with you answer]</p>
+      <p> when its not exactly 7 or 8 it prints out "i have to use car top school" </p>
       <li>Discuss the behavior for part 4, what happens if the number is exactly 0, is zero positive or negative?</li>
+      <p>my program prints out that it is Zero</p>
     </ol>
     <script type="module" src="./task_3-1.mjs" defer></script>
   </body>
