--- a/module_3/task_3-2/task_3-2.html
+++ b/module_3/task_3-2/task_3-2.html
@@ -6,6 +6,7 @@
   </head>
   <body style="display: table-cell; vertical-align: middle">
     <h2><label for="txtOut">Output from Task 3.2:</label></h2>
+    <h2><label for="txtOut"><a href="task_3-2.html">Refresh</a></label></h2>
     <div style="padding: 10px; min-width: 512px; border: darkblue thin solid; background-color: antiquewhite; font-family: 'Courier New', serif">
       <span id="txtOut" style="white-space: nowrap"></span>
     </div>
